jEdit 5.6 version history
       (changes since jEdit 5.5.0)
:encoding=UTF-8:

{{{ Version 5.6pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Hrotkó Gábor,
Alan Ezust, and Dale Anson for contributing to this release.

{{{ Bug Fixes

- Patch #617 - Fixed Untitled Issue with -background command line option
  (Hrotkó Gábor)

- Fix for bug #4069, handle case where user has not set either a backup prefix
or suffix (Dale Anson)

- Fix for bug # 4055, odd default colors for style editor (Dale Anson)

- Fix for bug # 2412, Preview Javadoc macro NPE (Dale Anson)

- Fix for bug # 2626, dockable buttons don't wrap correctly (Dale Anson)

- Fix for bug # 2719, electric scroll not working with page up/down (Dale Anson)

- Applied patch # 620, Chinese Taiwan localization from David Day (Dale Anson)

}}}
{{{ Miscellaneous
- Fixed all deprecation warnings produced when compiling with Java 9 (Dale
 Anson)

}}}
{{{ API Changes
- New method IntegerArray.isEmpty() (Matthieu Casanova)

}}}
{{{ Editing


}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: