@@ -71,15 +71,6 @@ public class AppearanceOptionPane extends AbstractOptionPane implements ItemList
 
 		lookAndFeel = new JComboBox<String>(names);
 		lookAndFeel.setSelectedIndex(index);
-		lookAndFeel.addActionListener(new ActionListener()
-		{
-			@Override
-			public void actionPerformed(ActionEvent evt)
-			{
-				updateEnabled();
-			}
-		});
-		lookAndFeel.addItemListener( this );
 
 		addComponent(jEdit.getProperty("options.appearance.lf"),
 			lookAndFeel);
@@ -99,15 +90,17 @@ public class AppearanceOptionPane extends AbstractOptionPane implements ItemList
 			}
 		}
 
-		/* Primary Metal L&F font */
+		/* Primary Swing font for button, menu, and label components */
 		Font pf = jEdit.getFontProperty("metal.primary.font");
 		primaryFont = new FontSelector(pf);
+		primaryFont.setEnabled(true);
 		addComponent(jEdit.getProperty("options.appearance.primaryFont"),
 			primaryFont);
 
-		/* Secondary Metal L&F font */
+		/* Secondary Swing font for list and textfield components */
 		secondaryFont = new FontSelector(jEdit.getFontProperty(
 			"metal.secondary.font"));
+		secondaryFont.setEnabled(true);
 		addComponent(jEdit.getProperty("options.appearance.secondaryFont"),
 			secondaryFont);
 
@@ -116,14 +109,6 @@ public class AppearanceOptionPane extends AbstractOptionPane implements ItemList
 			"helpviewer.font", pf));
 		addComponent(jEdit.getProperty("options.appearance.helpViewerFont"),
 			helpViewerFont);
-
-		/*
-		antiAliasExtras = new JComboBox(AntiAlias.comboChoices);
-		antiAliasExtras.setSelectedIndex(AntiAlias.appearance().val());
-		antiAliasExtras.setToolTipText(jEdit.getProperty("options.textarea.antiAlias.tooltip"));
-		addComponent(jEdit.getProperty("options.appearance.fonts.antialias"), antiAliasExtras);
-		*/
-		updateEnabled();
 
 		/* History count */
 		history = new NumericTextField(jEdit.getProperty("history"), true);
@@ -199,15 +184,10 @@ public class AppearanceOptionPane extends AbstractOptionPane implements ItemList
 		jEdit.setBooleanProperty("systrayicon", systemTrayIcon.isSelected());
 		IconTheme.set(iconThemes.getSelectedItem().toString());
 
-
-		/* AntiAlias nv = AntiAlias.appearance();
-		 int idx = antiAliasExtras.getSelectedIndex();
-		nv.set(idx);
-		primaryFont.setAntiAliasEnabled(idx > 0);
-		secondaryFont.setAntiAliasEnabled(idx > 0);
-		primaryFont.repaint();
-		secondaryFont.repaint(); */
-
+		// adjust swing properties for button, menu, and label, and list and 
+		// textfield fonts
+		setFonts();
+		
 		// This is handled a little differently from other jEdit settings
 		// as this flag needs to be known very early in the
 		// startup sequence, before the user properties have been loaded
@@ -237,27 +217,6 @@ public class AppearanceOptionPane extends AbstractOptionPane implements ItemList
 	private JComboBox<String> iconThemes;
 	private JCheckBox systemTrayIcon;
 	private boolean lnfChanged = false;
-	//}}}
-
-	//{{{ updateEnabled() method
-	private void updateEnabled()
-	{
-		String className = lfs[lookAndFeel.getSelectedIndex()]
-			.getClassName();
-
-		if(className.equals("javax.swing.plaf.metal.MetalLookAndFeel")
-			|| className.equals("com.incors.plaf.kunststoff.KunststoffLookAndFeel"))
-		{
-			primaryFont.setEnabled(true);
-			secondaryFont.setEnabled(true);
-		}
-		else
-		{
-			primaryFont.setEnabled(false);
-			secondaryFont.setEnabled(false);
-		}
-	} //}}}
-
 	//}}}
 
 	//{{{ setFileFlag() method
@@ -292,9 +251,60 @@ public class AppearanceOptionPane extends AbstractOptionPane implements ItemList
 		}
 	} //}}}
 	
+	//{{{ setFonts() method
+	private void setFonts() {
+		// "primary" font, for buttons, labels, menus, etc, components that just 
+		// display text
+		UIManager.put("Button.font", primaryFont.getFont());
+		UIManager.put("CheckBox.font", primaryFont.getFont());
+		UIManager.put("CheckBoxMenuItem.font", primaryFont.getFont());
+		UIManager.put("ColorChooser.font", primaryFont.getFont());
+		UIManager.put("DesktopIcon.font", primaryFont.getFont());
+		UIManager.put("Label.font", primaryFont.getFont());
+		UIManager.put("Menu.font", primaryFont.getFont());
+		UIManager.put("MenuBar.font", primaryFont.getFont());
+		UIManager.put("MenuItem.font", primaryFont.getFont());
+		UIManager.put("OptionPane.font", primaryFont.getFont());
+		UIManager.put("Panel.font", primaryFont.getFont());
+		UIManager.put("PopupMenu.font", primaryFont.getFont());
+		UIManager.put("ProgressBar.font", primaryFont.getFont());
+		UIManager.put("RadioButton.font", primaryFont.getFont());
+		UIManager.put("RadioButtonMenuItem.font", primaryFont.getFont());
+		UIManager.put("ScrollPane.font", primaryFont.getFont());
+		UIManager.put("Slider.font", primaryFont.getFont());
+		UIManager.put("TabbedPane.font", primaryFont.getFont());
+		UIManager.put("Table.font", primaryFont.getFont());
+		UIManager.put("TableHeader.font", primaryFont.getFont());
+		UIManager.put("TitledBorder.font", primaryFont.getFont());
+		UIManager.put("ToggleButton.font", primaryFont.getFont());
+		UIManager.put("ToolBar.font", primaryFont.getFont());
+		UIManager.put("ToolTip.font", primaryFont.getFont());
+		UIManager.put("Tree.font", primaryFont.getFont());
+		UIManager.put("Viewport.font", primaryFont.getFont());
+		
+		// "secondary" font, for components the user can type into
+		UIManager.put("ComboBox.font", secondaryFont.getFont());
+		UIManager.put("EditorPane.font", secondaryFont.getFont());
+		UIManager.put("FormattedTextField.font", secondaryFont.getFont());
+		UIManager.put("List.font", secondaryFont.getFont());
+		UIManager.put("PasswordField.font", secondaryFont.getFont());
+		UIManager.put("Spinner.font", secondaryFont.getFont());
+		UIManager.put("TextArea.font", secondaryFont.getFont());
+		UIManager.put("TextField.font", secondaryFont.getFont());
+		UIManager.put("TextPane.font", secondaryFont.getFont());		
+	} //}}}
+	
+	
+	
+    //}}}
+	
 	// {{{ itemStateChanged() methos
     public final void itemStateChanged( ItemEvent evt ) 
     {
 		lnfChanged = true;
     } // }}}
+    
+	    
+
+
 }
